--- a/src/components/StudentProfileCard/StudentProfileCard.module.css
+++ b/src/components/StudentProfileCard/StudentProfileCard.module.css
@@ -73,7 +73,7 @@
 
 .skillsList {
   list-style-type: none;
-  margin-top: 1rem;
+  margin-top: 0.5rem;
   padding: 0;
   display: flex;
   flex-direction: column;
